[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/jpd.moho_importer/components/moho_inspector_plugin_theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/jpd.moho_importer/smart_bone_helper/SmartBoneHelper.gd" type="Script" id=2]

[node name="SmartBoneHelper" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 8.0
margin_right = 1786.0
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveActions" type="Button" parent="Options"]
margin_right = 1780.0
margin_bottom = 20.0
hint_tooltip = "Saves actions (and its animation) as external resources"
text = "Save Actions"

[node name="Separator" type="HSeparator" parent="Options"]
margin_top = 24.0
margin_right = 1780.0
margin_bottom = 28.0

[node name="ActionName" type="LineEdit" parent="Options"]
margin_top = 32.0
margin_right = 1780.0
margin_bottom = 56.0
placeholder_text = "Enter new action name"

[node name="CreateNewAction" type="Button" parent="Options"]
margin_top = 60.0
margin_right = 1780.0
margin_bottom = 80.0
text = "Create New Action"

[node name="Separator2" type="HSeparator" parent="Options"]
margin_top = 84.0
margin_right = 1780.0
margin_bottom = 88.0

[node name="ToggleProcess" type="CheckButton" parent="Options"]
margin_top = 92.0
margin_right = 1780.0
margin_bottom = 132.0
text = "Toggle bone process"

[node name="EditAction" type="HBoxContainer" parent="Options"]
margin_top = 136.0
margin_right = 1780.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="Options/EditAction"]
margin_top = 3.0
margin_right = 888.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Edit Action"

[node name="Options" type="OptionButton" parent="Options/EditAction"]
margin_left = 892.0
margin_right = 1780.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="BindCurrentState" type="Button" parent="Options"]
margin_top = 160.0
margin_right = 1780.0
margin_bottom = 180.0
text = "Bind Current State"

[connection signal="pressed" from="Options/SaveActions" to="." method="_on_SaveActions_pressed"]
[connection signal="text_changed" from="Options/ActionName" to="." method="_on_ActionName_text_changed"]
[connection signal="pressed" from="Options/CreateNewAction" to="." method="_on_CreateNewAction_pressed"]
[connection signal="toggled" from="Options/ToggleProcess" to="." method="_on_ToggleProcess_toggled"]
[connection signal="item_selected" from="Options/EditAction/Options" to="." method="_on_Options_item_selected"]
[connection signal="pressed" from="Options/BindCurrentState" to="." method="_on_BindCurrentState_pressed"]
